[gd_scene load_steps=8 format=3 uid="uid://xyxckdkgbf66"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_061r3"]
[ext_resource type="Theme" uid="uid://bo4h3j1vvbdu8" path="res://theme.tres" id="2_g7jr4"]

[sub_resource type="InputEventKey" id="InputEventKey_5h8p8"]
device = -1
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_fg5f4"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_432sd"]
events = [SubResource("InputEventKey_5h8p8"), SubResource("InputEventKey_fg5f4")]

[sub_resource type="InputEventKey" id="InputEventKey_t8wot"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_yrsti"]
events = [SubResource("InputEventKey_t8wot")]

[node name="Node" type="Node"]
script = ExtResource("1_061r3")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.478431, 0.0588235, 1)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 55.0
offset_right = 21.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Umbrella Fella"

[node name="InstructionsLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 146.0
offset_right = 128.0
offset_bottom = 221.0
grow_horizontal = 2
text = "            A S D = Movement
Space = Jump
                    Shift = Open Umbrella

Press Enter to Play!"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -36.0
offset_right = 142.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_g7jr4")
theme_override_font_sizes/font_size = 32
action_mode = 0
shortcut = SubResource("Shortcut_432sd")
text = "Play"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 77.0
offset_right = 74.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_g7jr4")
theme_override_font_sizes/font_size = 32
action_mode = 0
shortcut = SubResource("Shortcut_yrsti")
text = "Quit"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
